--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,12 @@ p{
 .balance{
   font-size: 13px !important ;
 }
+.preloader{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background: #fff url('../image/Spinner-3.gif') no-repeat center center;
+  z-index: 99;
+}
